kubernetes/apps/thelounge/app/service.yaml
---
# yaml-language-server: $schema=https://raw.githubusercontent.com/yannh/kubernetes-json-schema/master/master-standalone/service-v1.json
apiVersion: v1
kind: Service
metadata:
  name: &app thelounge
  labels:
    app.kubernetes.io/name: *app
spec:
  ports:
    - name: http
      port: 80
      targetPort: 9000
  selector:
    app.kubernetes.io/name: *app
